[package]
name = "bevy_camera_extras"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/rydb/bevy_camera_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing a collection of utilities to making working with cameras in bevy easier."

[dependencies]
bevy_transform = "0.13"
bevy_window = "0.13"
bevy_ecs = "0.13"
bevy_render = "0.13"
bevy_core_pipeline = "0.13"
bevy_asset = "0.13"
bevy_input = "0.13"
bevy_time = "0.13"
bevy_log = "0.13"
bevy_app = "0.13"
bevy_utils = "0.13"
glam = "0.25"


[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"]}
bevy-inspector-egui =  "0.23"

#bevy-inspector-egui = "0.22.1"
