[package]
name = "bevy_camera_extras"
version = "0.13.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_camera_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing a collection of utilities to making working with cameras in bevy easier."

[dependencies]
bevy_transform = "0.14"
bevy_window = "0.14"
bevy_ecs = "0.14"
bevy_render = "0.14"
bevy_core_pipeline = "0.14"
bevy_asset = "0.14"
bevy_input = "0.14"
bevy_time = "0.14"
bevy_log = "0.14"
bevy_app = "0.14"
bevy_utils = "0.14"
bevy_reflect = "0.14"
glam = "0.27"

[dev-dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"]}
bevy-inspector-egui =  "0.25"
egui = "0.28"
egui_extras = "0.28"
bevy_ui_extras = "0.10.0"
#bevy-inspector-egui = "0.22.1"
