[package]
name = "bevy_camera_extras"
version = "0.15.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_camera_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing a collection of utilities to making working with cameras in bevy easier."

[dependencies]
bevy_transform = "0.15"
bevy_window = "0.15"
bevy_ecs = "0.15"
bevy_render = "0.15"
bevy_core_pipeline = "0.15"
bevy_asset = "0.15"
bevy_input = "0.15"
bevy_time = "0.15"
bevy_log = "0.15"
bevy_app = "0.15"
bevy_utils = "0.15"
bevy_reflect = "0.15"
glam = "0.29"

[dev-dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"]}
bevy-inspector-egui =  "0.28"
egui = "0.29"
egui_extras = "0.29"
bevy_ui_extras = "0.16.0"
#bevy-inspector-egui = "0.22.1"
